--- a/Impressionable-Desktop/index.html
+++ b/Impressionable-Desktop/index.html
@@ -16,7 +16,7 @@
     <title>Impressionable</title>
     <meta charset="UTF-8">
 </head>
-
+<div></div>
 <body ng-app="impressionableApp" ng-controller="userController" id="background" ng-cloak="true">
   <div></div>
   <div>
@@ -30,7 +30,7 @@
         <a class="link" onclick="openExternalLink('https://github.com/david-GU')">David Gu</a>,
         <a class="link" onclick="openExternalLink('https://github.com/hansenngai')"> Hansen Ngai</a>,
         and Shayla Stausgaard for
-        <a class="link" onclick="openExternalLink('https://hackwestern.com/')">  Western Hacks 3 </a>
+        <a class="link" onclick="openExternalLink('https://hackwestern.com/')">  Hack Western 3 </a>
       </h1>
       </div>
     </div>
@@ -62,15 +62,18 @@
     </div>
   </div>
   <div class="foreground" ng-controller="homeController" ng-show="mainScreen.state">
+    <h4 id="loggedInCredit"> Logged in as <br> {{user.username}} </h4>
     <img id="logoutImage" ng-click="changeToTrue(1, screenList, 'state')" src="images/logout.jpg" />
-    <div ng-show="homeScreen.state">
+    <div ng-show="homeScreen.state" id="homeScreenID">
       <div id="updateInfoButton" ng-click="changeToTrue(1, homeList, 'state')"> Update Information </div>
-      <div id="createSessionButton" ng-click="changeToTrue(2, homeList, 'state')"> Create New Session </div>
-      <input id="joinSessionInput" type="text" ng-model="chosenSessionID">
+      <div id="createSessionButton" ng-click="changeToTrue(2, homeList, 'state'); changeToTrue(0, qualitiesList, 'state')"> Create New Session </div>
+      <h1 style="color:white; margin-left: 500px; margin-top: 500px; position:fixed;"> {{joinSessionMsg}} </h1>
+      <input id="joinSessionInput" style="text-align:center" type="text" ng-model="chosenSessionID">
       <div id="joinSessionButton" ng-click="addSessionApp(chosenSessionID)"> Upload Information to Above Session </div>
     </div>
-    <div ng-show="updateInfoScreen.state">
-      <h1 id="welcome"> Hi {{user.realName}}, <br> Please change the following: </h1>
+    <div ng-show="updateInfoScreen.state" id="updateInfoScreen">
+      <img id="loginBackArrow_updateInfoScreen" class="loginBackArrow" src="images/backarrow.jpg" ng-click="changeToTrue(0, homeList, 'state')"/>
+      <h1 id="welcome"> Hi {{user.realName}}, <br> Please update the following: </h1>
       <h2 class="updateInfoFields"> Major: <input type="text" style="margin-left:500px;" ng-model="amajor"></h2>
       <h2 class="updateInfoFields"> Minor (leave blank if not applicable): <input type="text" style="margin-left:195px;" ng-model="aminor"></h2>
       <h2 class="updateInfoFields"> Year of study (leave blank if not applicable): <input type="text" style="margin-left:120px;" ng-model="ayear"></h2>
@@ -78,10 +81,21 @@
       <div id="updateInfoButtonSelect" ng-click="updateUser(amajor, aminor, ayear, agpa)"> Submit Changes </div>
       <h2 class="updateInfoFields"> {{updateUserMsg}} </h2>
     </div>
-    <div ng-show="createSessionScreen.state">
-      <h1 ng-click="createSession('taran')" id="createSessionButtonSelect"> Create a New Session </h1> <br> <br><br> <br> <br> <br><br> <br><br> <br><br> <br><br> <br><br> <br>
-      <h1 class="sessionID"> The admin's session ID is {{adminID}} </h1>
-      <h1 class="sessionID"> The applicant's session ID is {{applicantID}} </h1>
+    <div ng-show="createSessionScreen.state" id="createSessionScreen">
+      <img id="loginBackArrow_createSessionScreen" class="loginBackArrow" src="images/backarrow.jpg" ng-click="changeToTrue(0, homeList, 'state')"/>
+      <div ng-show="qualitiesScreen.state">
+        <h1 id="coreQualities"> Five core qualities desired in prospective candidates: </h1> <br> <br> <br>
+        <input type="text" style="margin-left: 480px; width: 400px; text-align: center" ng-model="quality1"> <br> <br> <br> <br>
+        <input type="text" style="margin-left: 480px; width: 400px; text-align: center" ng-model="quality2"> <br> <br> <br> <br>
+        <input type="text" style="margin-left: 480px; width: 400px; text-align: center" ng-model="quality3"> <br> <br> <br> <br>
+        <input type="text" style="margin-left: 480px; width: 400px; text-align: center" ng-model="quality4"> <br> <br> <br> <br>
+        <input type="text" style="margin-left: 480px; width: 400px; text-align: center" ng-model="quality5"> <br> <br> <br> <br>
+        <div id="nextButton" ng-click="changeToTrue(1, qualitiesList, 'state'); createSession(user.username, quality1, quality2, quality3, quality4, quality5); "> Next </div>
+      </div>
+      <div ng-show="sessionScreen.state">
+        <h1 class="sessionID"> The admin's session ID is {{adminID}} </h1>
+        <h1 class="sessionID"> The applicant's session ID is {{applicantID}} </h1>
+      </div>
     </div>
 
 
